# cliforge

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
src/cliforge/: __init__.py  main.py
src/cliforge/auth/: providers.py  storage.py
src/cliforge/cli/: app.py  dynamic.py  formatting.py
src/cliforge/cli/commands/: add.py  connectors.py  forge.py  tools.py
src/cliforge/connectors/: base.py
src/cliforge/connectors/mcp/: __init__.py  connector.py
src/cliforge/connectors/openapi/: __init__.py  connector.py  executor.py  loader.py  parser.py
src/cliforge/models/: __init__.py  execution.py  schema.py  tool.py
src/cliforge/registry/: persistence.py  store.py
src/cliforge/runtime/: engine.py  validation.py
src/cliforge/runtime/executors/: mcp.py  openapi.py
src/cliforge/schema/: conversion.py  inspection.py
tests/: conftest.py  test_cli.py  test_forge.py  test_mcp.py  test_openapi.py  test_runtime.py
tests/e2e/: test_e2e.py
tests/fixtures/: example_api.yaml  minimal_api.json
tests/integration/: test_registry.py
