[project]
name = "cliforge"
version = "0.1.0"
description = "Schema-driven runtime that converts OpenAPI specs and MCP servers into production-quality CLI tools"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.7.0",
    "jsonschema>=4.22.0",
    "httpx>=0.27.0",
    "anyio>=4.4.0",
    "pyyaml>=6.0.1",
    "mcp>=1.0.0",
]

[project.scripts]
cliforge = "cliforge.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cliforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "PTH"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "anyio[trio]>=4.4.0",
    "pytest-mock>=3.14.0",
]
